--- a/Resources/Prototypes/_RMC14/Entities/Mobs/Xeno/parasite.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Mobs/Xeno/parasite.yml
@@ -1,15 +1,14 @@
-﻿- type: entity
+- type: entity
   parent:
   - CMXenoUndeveloped
   - CMXenoFlammable
-  id: CMXenoParasite # TODO RMC14 slowly die off weeds
+  id: CMXenoParasite
   name: Parasite
   components:
   - type: GhostRole
     name: cm-job-name-xeno-parasite
-    prob: 0.25
     raffle:
-      settings: timeRequirement
+      settings: parasiteTimeRequirement
   - type: Sprite
     sprite: _RMC14/Mobs/Xenonids/Parasite/parasite.rsi
   - type: MobState
@@ -87,6 +86,7 @@
   - type: RMCSize
     size: Small
   - type: ParasiteAI
+  - type: SleepNPC
   - type: CanEscapeInventory
     baseResistTime: 1
   - type: HTN
