--- a/Resources/Prototypes/_RMC14/Entities/Mobs/Xeno/queen.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Mobs/Xeno/queen.yml
@@ -251,7 +251,7 @@
   #components:
   # - type: XenoEvolution #can be enabled for events like april fools.
   #   strains:
-  #   - RMCQueenMaid
+  #   - RMCXenoQueenMaid
 
 - type: entity
   id: XenoLeaderPheromoneRelay
@@ -260,7 +260,7 @@
 
 - type: entity
   parent: RMCXenoQueenBase
-  id: RMCQueenMaid
+  id: RMCXenoQueenMaid
   suffix: Cat Maid Queen
   components:
   - type: Sprite
