--- a/Resources/Prototypes/_RMC14/Entities/Mobs/Xeno/base_xeno.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Mobs/Xeno/base_xeno.yml
@@ -356,6 +356,7 @@
   - type: RMCBuckleOffset
     offset: 0, 0.5
   - type: RMCArmorModifier
+  - type: RMCObstacleSlamCauserImmune
 
 - type: entity
   abstract: true
