--- a/Resources/Maps/_RMC14/shiva.yml
+++ b/Resources/Maps/_RMC14/shiva.yml
@@ -129,6 +129,18 @@ entities:
     - type: MapLight
     - type: Roof
       data: {}
+    - type: RMCWeatherCycle
+      minTimeBetweenEvents: 1200
+      weatherEvents:
+      - name: Snow
+        duration: 600
+        weatherType: RMCStrataClearsky
+      - name: Snowstorm
+        duration: 360
+        weatherType: RMCStrataSnowing
+      - name: Blizzard
+        duration: 240
+        weatherType: RMCStrataBlizzard
     - type: LoadedMap
     - type: MapGrid
       chunks:
