--- a/Resources/Prototypes/_RMC14/Entities/Markers/Inserts/lv624.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Markers/Inserts/lv624.yml
@@ -132,10 +132,10 @@
   components:
   - type: MapInsert
     variations:
+    - spawn: "/Maps/_RMC14/Inserts/LV624/bridge_east.yml"
+      probability: 0.1
     - spawn: "/Maps/_RMC14/Inserts/LV624/bridge_restored.yml"
       probability: 0.1
-    # - spawn: "/Maps/_RMC14/Inserts/LV624/bridge_east.yml"
-      # probability: 0.1
     clearEntities: true
     clearDecals: true
     
@@ -150,6 +150,19 @@
     - spawn: "/Maps/_RMC14/Inserts/LV624/centralcaves_T.yml"
       probability: 0.1
     - spawn: "/Maps/_RMC14/Inserts/LV624/centralcaves_qc.yml"
+      probability: 0.1
+    clearEntities: true
+    clearDecals: true
+        
+- type: entity
+  parent: RMCMapInsertBase
+  id: RMCMapInsertLV624Medbay
+  name: Medbay
+  suffix: Insert LV624
+  components:
+  - type: MapInsert
+    variations:
+    - spawn: "/Maps/_RMC14/Inserts/LV624/medbay_destroyed.yml"
       probability: 0.1
     clearEntities: true
     clearDecals: true
