fixed pain-stop injector contain tricordazine instead of tramadol

--- a/Resources/Prototypes/_RMC14/Entities/Objects/Medical/auto_injectors.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Objects/Medical/auto_injectors.yml
@@ -210,7 +210,7 @@
       pen:
         maxVol: 15
         reagents:
-        - ReagentId: CMTricordrazine
+        - ReagentId: CMTramadol
           Quantity: 15
   - type: SolutionContainerVisuals # TODO fix this
     maxFillLevels: 1
