Make crates only destroyable by verysharp claws, crate dragging is slower

--- a/Resources/Prototypes/_RMC14/Entities/Mobs/Species/base.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Mobs/Species/base.yml
@@ -212,6 +212,10 @@
       whitelist:
         tags:
         - BodyBag
+    - multiplier: 0.645
+      whitelist:
+        components:
+        - ResistLocker #Lockers/Crates
   - type: MobThresholds
     thresholds:
       0: Alive
