--- a/Resources/Prototypes/_RMC14/Entities/Objects/Weapons/Guns/Flamethrowers/m34_flamer.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Objects/Weapons/Guns/Flamethrowers/m34_flamer.yml
@@ -80,6 +80,7 @@
       sprite: _RMC14/Interface/MousePointer/flamer_mouse.rsi
       state: all
   - type: RMCIgniter
+  - type: RMCAmmoEject
   - type: GenericVisualizer
     visuals:
       enum.RMCFlamerVisualLayers.Strip:
