--- a/Resources/Prototypes/_RMC14/Entities/Clothing/OuterClothing/coats.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Clothing/OuterClothing/coats.yml
@@ -17,6 +17,8 @@
       - PillCanister
       - CMSurgicalCase
   - type: PlaytimeMedalHolder
+  - type: AllowSuitStorage
+    whitelist: {}
 
 - type: entity
   abstract: True
