--- a/Resources/Prototypes/_RMC14/Entities/Structures/Machines/Vending/Crew/intel.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Structures/Machines/Vending/Crew/intel.yml
@@ -129,6 +129,7 @@
       entries:
       - id: RMCArmorXM4
       - id: RMCArmorM3LightVariants
+      - id: RMCArmorVestIO
     - name: Jacket
       choices: { CMCoat: 1 }
       entries:
