--- a/Resources/Maps/_RMC14/admin_fax.yml
+++ b/Resources/Maps/_RMC14/admin_fax.yml
@@ -277,6 +277,8 @@ entities:
       data:
         chunkSize: 4
     - type: GasTileOverlay
+    - type: BecomesStation
+      id: AdminFax
     - type: RadiationGridResistance
     - type: AreaGrid
       labels: {}
