Fix surge not working on doors

--- a/Resources/Prototypes/_RMC14/Entities/Structures/Xeno/xeno_walls.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Structures/Xeno/xeno_walls.yml
@@ -30,7 +30,7 @@
     xenoDamage:
       types:
         Slash: 225
-  - type: XenoConstructReinforce
+  - type: ResinSurgeReinforcable
 
 - type: entity
   parent: WallXenoResin
