MP Vendor Changes: Add MK80 and Ziptie Boxes.

--- a/Resources/Prototypes/_RMC14/Entities/Clothing/OuterClothing/basic_armor.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Clothing/OuterClothing/basic_armor.yml
@@ -23,6 +23,39 @@
   - type: RMCNameItemOnVend
     item: Armor
   - type: RMCBulkyArmor
+  - type: Storage
+    maxItemSize: Small
+    grid:
+    - 0,0,1,1 # Only a ziptie box
+  - type: LimitedStorage
+    limits:
+    - popup: rmc-storage-limit-not-ziptie-box
+      blacklist:
+        tags:
+        - RMCBoxZipties
+      whitelist: null
+      count: 0
+  - type: ContainerContainer
+    containers:
+      storagebase: !type:Container
+        ents: [ ]
+  - type: UserInterface
+    interfaces:
+      enum.StorageUiKey.Key:
+        type: StorageBoundUserInterface
+  - type: FixedItemSizeStorage
+  - type: IgnoreContentsSize
+    items:
+      tags:
+      - CMMagazineRifle
+      - CMMagazineSmg
+      - CMMagazineSniper
+      - CMMagazinePistol
+      - RMCMagazineRevolver
+      - MRE
+      - PillPacket
+      - PillCanister
+      - CMSurgicalCase
 
 - type: entity
   parent: CMArmorRiot
