--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/SPP/leader.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/SPP/leader.yml
@@ -81,7 +81,7 @@
     outerClothing: RMCArmorSPPRifleman
     gloves: RMCHandsVeteranSPP
     shoes: CMBootsBlackFilled
-    suitstorage: WeaponRifleM16 # TODO RMC14 : Replace with Type-71 Rifle AP
+    suitstorage: RMCWeaponRifleType71
     id: RMCIDSPP
     belt: CMM77BeltFilled # TODO RMC14 : Replace with T73, NP92 or Revolver
     back: RMCSatchelSPPRifleman
@@ -90,6 +90,8 @@
   storage:
     back:
     - RMCBoxZiptie
+    - RMCMagazineRifleType71AP
+    - RMCMagazineRifleType71AP
 
 - type: playTimeTracker
   id: CMJobSPPLeader
