--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/SPP/sapper.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/SPP/sapper.yml
@@ -69,9 +69,9 @@
     outerClothing: RMCArmorSPPRifleman
     gloves: RMCHandsVeteranInsulated
     shoes: CMBootsBlackFilled
-    suitstorage: WeaponRifleM16 # TODO RMC14 : Replace with Type-71 Rifle Sapper Variant
+    suitstorage: RMCWeaponRifleType71Flamer
     id: RMCIDSPP
-    belt: RMCM17BeltFilled # TODO RMC14 : Replace with Type-71 Ammo Belt
+    belt: RMCType71BeltFilled
     back: RMCSatchelSPPWelderEngineer
     pocket1: RMCPouchAutoinjectorFill
     pocket2: RMCPouchConstructionFillFull
