admin menu for factions

--- a/Resources/Prototypes/_RMC14/Entities/Clothing/Back/satchels.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Clothing/Back/satchels.yml
@@ -495,7 +495,9 @@
   components:
   - type: StorageFill
     contents:
-    - id: CMMRE # TODO : Needs hacked MD and SPP sentry
+    - id: CMMRE
+    - id: RMCMotionDetector # TODO RMC14: hacked MD
+    - id: RMCSentryMiniSPP
 
 - type: entity
   parent: CMSatchelMarineMedic
