--- a/Resources/Prototypes/_RMC14/Entities/Structures/Machines/Vending/Crew/requisitions.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Structures/Machines/Vending/Crew/requisitions.yml
@@ -33,6 +33,8 @@
         amount: 50
       - id: CMWeaponPistolM1984
         amount: 50
+      - id: RMCWeaponPistolM11
+        amount: 50
       #- id: CMWeaponFlareM82F
       #  amount: 20
     - name: Restricted Firearms
@@ -344,6 +346,8 @@
         amount: 80
       - id: CMMagazinePistolM1984
         amount: 100
+      - id: RMCMagazinePistolM11
+        amount: 100
     - name: Armor-piercing ammunition
       entries:
       - id: CMMagazinePistolM77AP
@@ -361,6 +365,10 @@
       - id: CMMagazineSMGM63Ext
         amount: 10
       - id: CMMagazineRifleM54CExt
+        amount: 8
+      - id: RMCMagazinePistolM11Ext
+        amount: 10
+      - id: RMCMagazinePistolM11Drum
         amount: 8
     - name: Special ammunition
       entries:
@@ -401,12 +409,12 @@
     - name: Magazine Boxes
       hasBoxes: true
       entries:
-#      - name: Magazine Box (M10 x 22)
-#        box: RMCMagazine10
-#      - name: Magazine Box (Ext M10 x 14)
-#        box: RMCMagazineExtended10
-#      - name: Magazine Box (Drum M10 x 12)
-#        box: RMCMagazineDrum10
+      - name: Magazine Box (M11 x 22)
+        box: RMCMagazine11
+      - name: Magazine Box (Ext M11 x 14)
+        box: RMCMagazineExtended11
+      - name: Magazine Box (Drum M11 x 12)
+        box: RMCMagazineDrum11
       - id: RMCBoxMagazineSMGM63
         name: Magazine Box (M63 x 12)
         box: CMMagazineSMGM63
