--- a/Resources/migration.yml
+++ b/Resources/migration.yml
@@ -1115,3 +1115,6 @@ RMCEncryptionKeyFreelancer: RMCEncryptionKeyDukes
 
 # 2025-03-14
 RMCCrateWeldable: RMCCrateBase
+
+# 2025-04-14
+PlantBag: RMCStoragePlantBag
