Make Dylovene temporarily heal genetic damage

--- a/Resources/Prototypes/_RMC14/Reagents/medicine.yml
+++ b/Resources/Prototypes/_RMC14/Reagents/medicine.yml
@@ -13,6 +13,7 @@
       - !type:EqualHealthChange
         damage:
         - Toxin: -1
+        - Genetic: -1 # TODO RMC14 remove once other meds are in for genetic damage
       - !type:HealthChange
         conditions:
         - !type:ReagentThreshold
