Fix IOs not being able to buy M276 pattern combat toolbelt rigs

--- a/Resources/Prototypes/_RMC14/Entities/Structures/Machines/Vending/Crew/intel.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Structures/Machines/Vending/Crew/intel.yml
@@ -47,11 +47,15 @@
         points: 10
       - id: RMCMagazinePistolSU6
         points: 10
-    - name: Personal Sidearm
+    - name: Restricted Firearms
       entries:
       - id: RMCGunCasePistolMK80
         points: 15
       - id: RMCGunCasePistolSmart
+        points: 15
+    - name: Restricted Gear
+      entries:
+      - id: CMBeltUtilityCombatFilled
         points: 15
     - name: Pouches
       entries:
